# azureml-snowflake-control-plane-poc

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: validate.yml
azureml/components/build_features/: component.yml
azureml/components/invoke_batch/: component.yml
azureml/components/prepare_monitor_data/: component.yml
azureml/components/publish/: component.yml
azureml/components/pull/: component.yml
azureml/components/register_select/: component.yml
azureml/components/train/: component.yml
azureml/environments/: runtime-conda.yml  runtime.environment.yml
azureml/monitoring/: model-monitor.schedule.yml
azureml/pipelines/: lifecycle.pipeline.yml
azureml/scoring/: batch_driver.py
config/: poc.yaml
dev_plans/: 001-azureml-snowflake-control-plane-poc.md
docs/: architecture.md  configuration.md  maturity-roadmap.md  operations.md  sources.md
feature_store/: generate_spec.py
feature_store/entities/: entity.yaml
feature_store/featuresets/exact_quantity/: featureset.yaml
functions/: function_app.py  host.json  requirements.txt
infra/: event-grid.bicep  main.bicep
scripts/: configure_monitor.py  load_azureml_yaml.py  package_function.py
snowflake/: 001_prediction_contract.sql
src/azureml_snowflake_poc/: __init__.py  aml_gateway.py  component_io.py  configuration.py  contracts.py  demo.py  events.py  features.py  gate.py  identity.py  modeling.py  monitoring.py  promotion_lock.py  repository_validation.py  snowflake_io.py  snowflake_publish.py
src/azureml_snowflake_poc/components/: __init__.py  build_features.py  invoke_batch.py  prepare_monitor_data.py  publish.py  pull.py  register_select.py  train.py
tests/: test_batch_driver.py  test_contracts.py  test_demo.py  test_events.py  test_gate.py  test_identity.py  test_monitoring.py  test_promotion_lock.py  test_snowflake_publish.py
